--- a/NasaTestObjc/DetailApi.storyboard
+++ b/NasaTestObjc/DetailApi.storyboard
@@ -38,7 +38,6 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="ScF-7t-hvr" secondAttribute="trailing" constant="16" id="2DK-Vo-jsq"/>
                                             <constraint firstItem="ScF-7t-hvr" firstAttribute="top" secondItem="3tR-Og-cOA" secondAttribute="bottom" constant="24" id="FzR-m2-sOa"/>
@@ -50,7 +49,6 @@
                                         </constraints>
                                     </scrollView>
                                 </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="0fb-Jv-ba3" secondAttribute="bottom" id="4zb-0d-ftz"/>
                                     <constraint firstItem="0fb-Jv-ba3" firstAttribute="leading" secondItem="PTW-2M-Ttk" secondAttribute="leading" id="Fnv-cv-5aY"/>
@@ -59,7 +57,7 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" red="0.47684186699999997" green="0.50480759139999998" blue="1" alpha="0.80000000000000004" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.47684186699999997" green="0.50480759139999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="PTW-2M-Ttk" firstAttribute="top" secondItem="zkW-lC-njo" secondAttribute="top" id="4YR-ej-tME"/>
                             <constraint firstItem="PTW-2M-Ttk" firstAttribute="leading" secondItem="zkW-lC-njo" secondAttribute="leading" id="7IO-xx-rRy"/>
